--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <!-- Stylesheet CSS -->
+    <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="Assets/css/style.css">
 
     <title>Hallie Calhoun | Bootstrap Portfolio</title>
   </head>
   <body>
 
-  <!-- <div class="container"> -->
+  <!-- <nav class="container"> -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light h-100">
     
     <span class="border-bottom"></span>
@@ -42,7 +43,7 @@
           </ul>
       </div>
       </nav>
-    <!-- </div> -->
+    <!-- </nav> -->
 
 
 
