--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
       </nav>
     <!-- </nav> -->
 
-
+<!-- div class form container start -->
 <div class="container mt-5 mb-5 pr-4 pl-4" style="background-color: #ffffff">
     <div class="jumbotron" style="background-color: #ffffff">
         <h2 class="font-weight-bold" style="color: #4aaaa5">About Me</h2>
@@ -54,7 +54,7 @@
         <div class="containter">
                 <div class="row">
                         <div class="col-sm-12">
-        <div class="container-form">
+        <div class="container">
                 <div class="col-sm-12">
             <form>
                 <label for="name">Name</label>
@@ -79,6 +79,7 @@
     </div>
   </div>
 </div>
+<!-- div class form container end  -->
 
 <footer class="jumbotron jumbotron-fluid mb-0 p-4" style="background-color: #555555">
         <!-- text-center allows us to center the text within this element -->
