--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         <div class="containter">
                 <div class="row">
                         <div class="col-sm-12">
-        <div class="container">
+        <div class="container-form">
                 <div class="col-sm-12">
             <form>
                 <label for="name">Name</label>
