box labels not added yet

--- a/portfolio.html
+++ b/portfolio.html
@@ -57,14 +57,14 @@
             <h3 class="feature-title"></h3>
             <div class="box">
             <img src="http://placehold.it/150x150" alt="Placeholder" class="img-fluid" style="position: relative">
-              <div id="label3" style="background-color: #4aaaa5; color: white; width: 150px; margin-top: -45px; padding-top: 5px; padding-bottom: 5px; position: absolute">Hangman</div>
+              <!-- <div id="label3" style="background-color: #4aaaa5; color: white; width: 150px; margin-top: -45px; padding-top: 5px; padding-bottom: 5px; position: absolute">Hangman</div> -->
               </div>
           </div>
           <div class="col-lg-4 col-md-4 col-sm-12">
             <h3 class="feature-title"></h3>
             <div class="box">
             <img src="http://placehold.it/150x150" alt="Placeholder" class="img-fluid">
-            <div id="label3" style="background-color: #4aaaa5; color: white; width: 150px; margin-top: -45px; padding-top: 5px; padding-bottom: 5px; position: absolute">RPG Game</div>
+            <!-- <div id="label3" style="background-color: #4aaaa5; color: white; width: 150px; margin-top: -45px; padding-top: 5px; padding-bottom: 5px; position: absolute">RPG Game</div> -->
               </div>
           </div>
         </div>
@@ -74,14 +74,14 @@
               <h3 class="feature-title"></h3>
               <div class="box">
               <img src="http://placehold.it/150x150" alt="Placeholder" class="img-fluid">
-              <div id="label3" style="background-color: #4aaaa5; color: white; width: 150px; margin-top: -45px; padding-top: 5px; padding-bottom: 5px; position: absolute">Trivia Game</div>
+              <!-- <div id="label3" style="background-color: #4aaaa5; color: white; width: 150px; margin-top: -45px; padding-top: 5px; padding-bottom: 5px; position: absolute">Trivia Game</div> -->
               </div>
           </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
                 <h3 class="feature-title"></h3>
                 <div class="box">
                 <img src="http://placehold.it/150x150" alt="Placeholder" class="img-fluid">
-                <div id="label3" style="background-color: #4aaaa5; color: white; width: 150px; margin-top: -45px; padding-top: 5px; padding-bottom: 5px; position: absolute">Rutgers Info Widget</div>
+                <!-- <div id="label3" style="background-color: #4aaaa5; color: white; width: 150px; margin-top: -45px; padding-top: 5px; padding-bottom: 5px; position: absolute">Rutgers Info Widget</div> -->
               </div>
               </div>
           </div>
