--- a/contact.html
+++ b/contact.html
@@ -28,14 +28,14 @@
       </button>
       <div class="collapse navbar-collapse nav justify-content-end id="navbarNav">
           <ul class="navbar-nav nav justify-content-end">
+          <li class="nav-item">
+              <a class="nav-link" href="index.html">About</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+          </li>
           <li class="nav-item active">
-              <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
           </li>
           <!-- <li class="nav-item"> -->
               <!-- <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a> -->
